ready to test nested forms

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,19 @@
   <p><%= @user.first_name %> <%= @user.last_name %></p>
   <p><%= @user.email %></p>
 </div>
+<div>
+  <% if @user = current_user %>
+    <% if @user.profile.bio %>
+      <%= @user.profile.bio %>
+    <% else %>
+      <p>Don't forget to fill out your bio!</p>
+      <%= form_for @user.profile do |f| %>
+        <%= f.text_area :bio, placeholder: "Enter bio.." %>
+        <%= f.submit "Save!" %>
+      <% end %>
+    <% end %>
+  <% end %>
+</div>
 
 <% if @user = current_user %>
   <%= link_to "Edit", edit_user_path(@user) %>
