--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,6 +22,11 @@
       <%= form.text_field :last_name, require: true %>
   </div>
   <div>
+    <%= form.fields_for :profile do |ff| %>
+      <%= ff.text_area :bio %>
+    <% end %>
+  </div>
+  <div>
     <%= form.submit "Update" %>
   </div>
 <% end %>
